# rust-template

./: .editorconfig  .gitignore  Cargo.toml
.github/: pull_request_template.md
crates/rust-template/: Cargo.toml  README.md
crates/rust-template/src/: lib.rs
