[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["pauliesnug"]
edition = "2024"
homepage = "https://github.com/pulseflow/rust-template"
repository = "https://github.com/pulseflow/rust-template"
readme = "./README.md"
license = "LicenseRef-OQL-1.2 OR MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unnecessary_cast = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
deprecated_cfg_attr = "warn"
separated_literal_suffix = "warn"
missing_errors_doc = "allow"
future_not_send = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"
unused_import_braces = "warn"
deprecated = "warn"
deprecated_in_future = "forbid"
unused_must_use = "deny"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls-native-roots"] }
indexmap = { version = "2.6", features = ["serde"] }
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
bytes = "1.9"
thiserror = "2.0"
futures = "0.3.31"
serde_json = "1.0"
lazy_static = "1.5"
dotenvy = "0.15"
